# emilia-claude-codex-cli-live2d-widget

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  launch.bat
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: main.js  platform.js  preload.cjs
frontend/public/assets/models/free/hiyori/: NOTICE.md
frontend/scripts/: emilia-voices.json  setup-emilia-models.ps1  setup-emilia-voices.ps1
frontend/src/: env.d.ts  main.ts  style.css
frontend/src/components/: DesktopWidgetLive2D.vue
frontend/src/composables/: availableModels.ts  desktopWidgetMonitor.ts  emiliaModels.ts  emiliaVoices.ts
frontend/src/pages/: DesktopWidget.vue
frontend/src/types/: sessionState.ts
frontend/src/utils/: serverUrl.ts  sessionStageState.ts  stateText.ts
frontend/src/utils/api/: sessionBridge.ts
scripts/: build-exe.ps1
server/: main.py  pyproject.toml
server/widget_server/: api.py  claude_jsonl.py  claude_usage.py  codex_jsonl.py  monitor.py  state.py  ws.py
