[project]
name = "emilia-widget-server"
version = "0.1.0"
description = "Slim session-monitor backend for the Emilia Live2D widget"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "watchfiles>=1.0.5",
]
